--- a/Feature_engineering_Zh.ipynb
+++ b/Feature_engineering_Zh.ipynb
@@ -1295,12 +1295,12 @@
    "id": "a28610ed-2c2c-4ef4-9f79-1060ea6ea6c7",
    "metadata": {},
    "source": [
-    "## 5. Remove the current ID column in the df_test"
+    "## 5. Remove the current ID column in the df_test ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "id": "e25bb704-049d-45e8-bcf2-c64c4df3b81b",
    "metadata": {},
    "outputs": [
@@ -1332,55 +1332,69 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>214195</th>\n",
-       "      <td>214195</td>\n",
-       "      <td>45</td>\n",
-       "      <td>18454</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>214196</th>\n",
-       "      <td>214196</td>\n",
-       "      <td>45</td>\n",
-       "      <td>16188</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>214197</th>\n",
-       "      <td>214197</td>\n",
-       "      <td>45</td>\n",
-       "      <td>15757</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>214198</th>\n",
-       "      <td>214198</td>\n",
-       "      <td>45</td>\n",
-       "      <td>19648</td>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5232</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>214199</th>\n",
-       "      <td>214199</td>\n",
-       "      <td>45</td>\n",
-       "      <td>969</td>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5268</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            ID  shop_id  item_id\n",
-       "214195  214195       45    18454\n",
-       "214196  214196       45    16188\n",
-       "214197  214197       45    15757\n",
-       "214198  214198       45    19648\n",
-       "214199  214199       45      969"
+       "   ID  shop_id  item_id\n",
+       "0   0        5     5037\n",
+       "1   1        5     5320\n",
+       "2   2        5     5233\n",
+       "3   3        5     5232\n",
+       "4   4        5     5268"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_test.tail()"
+    "df_test.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f35661e-01b0-403a-aa58-0b89ca7c3569",
+   "metadata": {},
+   "source": [
+    "** \n",
+    "\n",
+    "* ID in the test data set is not as the data description states\n",
+    "\n",
+    "*  i.e.: (ID - an Id that represents a (Shop, Item) tuple within the test set)\n",
+    "\n",
+    "* ID is not a tuple of Shop, Item combination. It is a number from the sequence starting from 0 assgned to each unique Shop_id, item_id pair, probably when data is rdered by shop_id."
    ]
   },
   {
