Updated - Aesthetic update

--- a/Feature_engineering_Final.ipynb
+++ b/Feature_engineering_Final.ipynb
@@ -72,7 +72,10 @@
   {
    "cell_type": "markdown",
    "id": "98bf9ac4-b876-4bf5-a1aa-35336e0e235b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## 1. Loading libraries and loading data into dataframes"
    ]
@@ -189,8 +192,6 @@
    "id": "8ea79e9c-783e-4a32-9bec-7a274b626c81",
    "metadata": {},
    "source": [
-    "* Update the item_price = - 1.0 cell to the mean price of that item. Or drop.\n",
-    "\n",
     "1. Type cast date column\n",
     "\n",
     "2. Remove the 6 duplicates in the df_train \n",
