--- a/Exploratory_Analysis_Zh.ipynb
+++ b/Exploratory_Analysis_Zh.ipynb
@@ -4777,8 +4777,22 @@
     "\n",
     "* Maybe add item category ID column to both testing and training datasets?\n",
     "\n",
-    "* Do we need to keep items from the category IDs not present in the testing dataset? "
+    "* Do we need to keep items from the category IDs not present in the testing dataset? \n",
+    "\n",
+    "Seasonality\n",
+    "\n",
+    "* December has the highest total item count sales. There is a sharp increase from November to December. There are more sales towards the year end.\n",
+    "\n",
+    "* Saturday has the highest total item count sales. There are more sales towards the weekend."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "391d03e1-f58d-4dfe-be87-fb6e612766de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
